--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <!--go-commons-->
-    <meta name="go-import" content="go.appmanch.org/commons git https://github.com/appmanch/go-commons.git">
-    <meta name="go-source" content="go.appmanch.org/commons
-                                        https://github.com/appmanch/go-commons
-                                        https://github.com/appmanch/go-commons/branch/master{/dir}
-        https://github.com/appmanch/go-commons/branch/master{/dir}/{file}#L{line}"/>
+    <meta name="go-import" content="go.nandlabs.io/commons git https://github.com/nandlabs/go-commons.git">
+    <meta name="go-import" content="go.nandlabs.io/l3 git https://github.com/nandlabs/go-l3.git">
+    <meta name="go-import" content="go.nandlabs.io/turbo git https://github.com/nandlabs/go-turbo.git">
+    <meta name="go-import" content="go.nandlabs.io/turbo-gen git https://github.com/nandlabs/go-turbo-gen.git">
+
+
+
+    <meta name="go-source" content="go.nandlabs.io/commons https://github.com/nandlabs/go-commons/branch/main{/dir} https://github.com/nandlabs/go-commons/branch/main{/dir}/{file}#L{line}"/>
+    <meta name="go-source" content="go.nandlabs.io/l3  https://github.com/nandlabs/go-l3/branch/main{/dir} https://github.com/nandlabs/go-l3/branch/main{/dir}/{file}#L{line}"/>
+    <meta name="go-source" content="go.nandlabs.io/turbo  https://github.com/nandlabs/go-turbo/branch/main{/dir} https://github.com/nandlabs/go-turbo/branch/main{/dir}/{file}#L{line}"/>
+    <meta name="go-source" content="go.nandlabs.io/turbo-gen https://github.com/nandlabs/go-turbo-gen/branch/main{/dir} https://github.com/nandlabs/go-turbo-gen/branch/main{/dir}/{file}#L{line}"/>
+
 </head>
 <body>
-Nothing to see here; <a href="http://opensource.appmanch.org">move along</a>.
+This page is only for redirect Please click  <a href="https://github.com/nandlabs">here</a> to view the repositories at github.
 </body>
 </html>
