--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <!--go-commons-->
-    <meta name="go-import" content="go.nandlabs.io/commons git https://github.com/nandlabs/go-commons.git">
-    <meta name="go-import" content="go.nandlabs.io/l3 git https://github.com/nandlabs/go-l3.git">
-    <meta name="go-import" content="go.nandlabs.io/turbo git https://github.com/nandlabs/go-turbo.git">
-    <meta name="go-import" content="go.nandlabs.io/turbo-gen git https://github.com/nandlabs/go-turbo-gen.git">
+    <meta name="go-import" content="go.nandlabs.io/commons git https://github.com/nandlabs/go-commons">
+    <meta name="go-import" content="go.nandlabs.io/l3 git https://github.com/nandlabs/go-l3">
+    <meta name="go-import" content="go.nandlabs.io/turbo git https://github.com/nandlabs/go-turbo">
+    <meta name="go-import" content="go.nandlabs.io/turbo-gen git https://github.com/nandlabs/go-turbo-gen">
 
 
 
