Added http-equiv refresh

--- a/404.html
+++ b/404.html
@@ -7,6 +7,8 @@
     <meta name="go-import" content="go.nandlabs.io/l3 git https://github.com/nandlabs/go-l3">
     <meta name="go-import" content="go.nandlabs.io/turbo git https://github.com/nandlabs/go-turbo">
     <meta name="go-import" content="go.nandlabs.io/turbo-gen git https://github.com/nandlabs/go-turbo-gen">
+    <meta http-equiv="refresh" content="https://go.nandlabs.io"/>
+
 
 
 
