--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="go-import" content="go.nandlabs.io/commons git https://github.com/nandlabs/go-commons">
     <meta name="go-import" content="go.nandlabs.io/l3 git https://github.com/nandlabs/go-l3">
     <meta name="go-import" content="go.nandlabs.io/turbo git https://github.com/nandlabs/go-turbo">
+    <meta name="go-import" content="go.nandlabs.io/go-gen git https://github.com/nandlabs/go-gen">
     <meta name="go-import" content="go.nandlabs.io/turbo-gen git https://github.com/nandlabs/go-turbo-gen">
     <meta http-equiv="refresh" content="https://go.nandlabs.io"/>
 
@@ -15,6 +16,7 @@
     <meta name="go-source" content="go.nandlabs.io/l3  https://github.com/nandlabs/go-l3/branch/main{/dir} https://github.com/nandlabs/go-l3/branch/main{/dir}/{file}#L{line}"/>
     <meta name="go-source" content="go.nandlabs.io/turbo  https://github.com/nandlabs/go-turbo/branch/main{/dir} https://github.com/nandlabs/go-turbo/branch/main{/dir}/{file}#L{line}"/>
     <meta name="go-source" content="go.nandlabs.io/turbo-gen https://github.com/nandlabs/go-turbo-gen/branch/main{/dir} https://github.com/nandlabs/go-turbo-gen/branch/main{/dir}/{file}#L{line}"/>
+    <meta name="go-source" content="go.nandlabs.io/go-gen https://github.com/nandlabs/go-gen/branch/main{/dir} https://github.com/nandlabs/go-gen/branch/main{/dir}/{file}#L{line}"/>
 
 </head>
 <body>
