added meta for turbo-auth

--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@
     <meta name="go-import" content="go.nandlabs.io/turbo git https://github.com/nandlabs/go-turbo">
     <meta name="go-import" content="go.nandlabs.io/go-gen git https://github.com/nandlabs/go-gen">
     <meta name="go-import" content="go.nandlabs.io/turbo-gen git https://github.com/nandlabs/go-turbo-gen">
+	<meta name="go-import" content="go.nandlabs.io/turbo-auth git https://github.com/nandlabs/turbo-auth">
     <meta http-equiv="refresh" content="https://go.nandlabs.io"/>
 
 
@@ -17,7 +18,8 @@
     <meta name="go-source" content="go.nandlabs.io/turbo  https://github.com/nandlabs/go-turbo/branch/main{/dir} https://github.com/nandlabs/go-turbo/branch/main{/dir}/{file}#L{line}"/>
     <meta name="go-source" content="go.nandlabs.io/turbo-gen https://github.com/nandlabs/go-turbo-gen/branch/main{/dir} https://github.com/nandlabs/go-turbo-gen/branch/main{/dir}/{file}#L{line}"/>
     <meta name="go-source" content="go.nandlabs.io/go-gen https://github.com/nandlabs/go-gen/branch/main{/dir} https://github.com/nandlabs/go-gen/branch/main{/dir}/{file}#L{line}"/>
-
+	<meta name="go-source" content="go.nandlabs.io/turbo-auth https://github.com/nandlabs/turbo-auth/branch/main{/dir} https://github.com/nandlabs/turbo-auth/branch/main{/dir}/{file}#L{line}"/>
+	
 </head>
 <body>
 This page is only for redirect Please click  <a href="https://github.com/nandlabs">here</a> to view the repositories at github.
